# Network-Intrusion

./: .gitignore  BinaryDataPreprocessing.py  DataPreprocessing.py  DataPreprocessing_Enhanced.py  DownloadDataset.py  README.md  cic_ids_2017_eda_complete_output.py  merged_dataset_eda.py  merged_dataset_eda_with_plots.py  prediction_service.py  predictions_20250824_231238.csv  predictions_20250824_232525.csv  predictions_20250824_232600.csv  pyproject.toml  requirements.txt  requirements_eda.txt  test_prediction.py  training.py  training_Multiclass_XGboost.py  training_Multiclass_rf.py  unsw_nb15_unique_analysis.py  web_app.py
dataset_process/: dataset_cic_ids.py  dataset_unsw.py  merge_both.py
eda_outputs/: CIC_IDS_2017_Complete_Analysis_20250922_141759.txt
model_checkpoint/: scaler_20250824_230851.pkl
sample_data/: sample_submission.csv
templates/: index.html
