[project]
name = "network-intrusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imblearn>=0.0",
    "jinja2>=3.1.6",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.5",
    "missingno>=0.5.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
]
